fix cost column alignment in FF

--- a/css/sass/components/7_prototype/_mediaplan.scss
+++ b/css/sass/components/7_prototype/_mediaplan.scss
@@ -188,15 +188,22 @@
                             min-width: 150px; 
                             max-width: 150px; 
                             width: 150px;
-                            padding: 5px;
                             
                             .currency-symbol {
-                                margin: 0; 
+                                margin-top: 6px;
+                                margin-left: 5px; 
                             }
                             
                             a {
                                 float: right;
                             }
+            &.col-cost:not(th){
+                a {
+                    margin-right: 5px;
+                    margin-top: 6px;
+                }
+            }
+            
             }
             &.col-kpi-cost      {min-width: 100px; max-width: 100px; width: 100px;}
             &.col-kpi-number    {min-width: 150px; max-width: 150px; width: 150px;}
